--- a/language/main/templates/main/main.html
+++ b/language/main/templates/main/main.html
@@ -12,6 +12,7 @@
 <p>現在時間:<span style=color:red>{{time}}</span></P>
 <br>
 <p><a href={% url 'wiki:wiki' %}>前往 Wiki 頁面</a></p>
-<p><a href={% url 'wiki:about' %}>前往 about 頁面</a></p>
+<p><a href={% url 'wiki:about' %}>前往 關於程式語言小百科 頁面</a></p>
+<p><a href={% url 'init:init' %}>前往 init 頁面</a></p>
 </body>
 </html>
