--- a/language/wiki/templates/wiki/wiki.html
+++ b/language/wiki/templates/wiki/wiki.html
@@ -9,7 +9,19 @@
 <body>
 <h1>Wiki 說--Hello world!</h1>
 <br>
+{% if categories %}
+<h2>程式語言類別：</h2>
+<table>
+<tr><th>類別名稱</th></tr>
+{% for category in categories %}
+<tr>
+<td><a href={% url 'wiki:category' category.name %}>{{category.name}}</a></td>
+</tr>
+{% endfor %}
+</table>
+{% else %}
+<p><strong>目前尚未設定程式語言類別。</strong></p>
+{% endif %}
 <p><a href={% url 'main:main' %}>回首頁</a></p>
-<img src={% static 'wiki/img/proglang.png' %} alt=程式語言影像>
 </body>
 </html>
