--- a/language/wiki/templates/wiki/category.html
+++ b/language/wiki/templates/wiki/category.html
@@ -21,7 +21,8 @@
  {% else %}
  <p><strong>此類別目前並無頁面。</strong></p>
  {% endif %}
-{% else %}
+ <p><a href={% url 'wiki:addPage' category.name %}>新增頁面</a></p>
+ {% else %}
  <p>所指定的類別「{{categoryName}}」不存在。</p>
 {% endif %}
 </body>
