--- a/language/wiki/templates/wiki/wiki.html
+++ b/language/wiki/templates/wiki/wiki.html
@@ -22,6 +22,7 @@
 {% else %}
 <p><strong>目前尚未設定程式語言類別。</strong></p>
 {% endif %}
+<p><a href={% url 'wiki:addCategory' %}>新增類別</a></p>
 <p><a href={% url 'main:main' %}>回首頁</a></p>
 </body>
 </html>
