--- a/language/wiki/templates/wiki/addPage.html
+++ b/language/wiki/templates/wiki/addPage.html
@@ -7,11 +7,12 @@
 <link rel=stylesheet href={% static 'main/css/main.css' %}>
 </head>
 <body>
-<h1>在"{{category.name}}"類別中新增一筆頁面</h1>
+<h1>在"{{category.name}}"分類中新增一筆頁面</h1>
 <form method=post action={% url 'wiki:addPage' category.name %}>
  {% csrf_token %}
  {{form.as_p}}
  <input type=submit value=送出>
 </form>
+<p><a href ={% url 'wiki:category' category.name %}>回到{{category.name}}頁面</a><p>
 </body>
 </html>
