--- a/language/wiki/templates/wiki/category.html
+++ b/language/wiki/templates/wiki/category.html
@@ -8,22 +8,29 @@
 </head>
 <body>
 {% if category %}
- <h1>{{category.name}}</h1>
- {% if pages %}
+<h1>{{category.name}}</h1>
+{% if pages %}
+<table>
+<tr><th>頁面標題</th></tr>
+{% for page in pages %}
  <table>
- <tr><th>頁面標題</th></tr>
- {% for page in pages %}
- <table>
- <td><a href={{page.url}}>{{page.title}}</a></td>
- </table>
- {% endfor %}
- </ul>
- {% else %}
- <p><strong>此類別目前並無頁面。</strong></p>
- {% endif %}
- <p><a href={% url 'wiki:addPage' category.name %}>新增頁面</a></p>
- {% else %}
- <p>所指定的類別「{{categoryName}}」不存在。</p>
+<td><a href={{page.url}}>{{page.title}}</a></td>
+<td>
+<form method=post action={% url 'wiki:deletePage' page.id %}>
+{% csrf_token %}
+<input type=submit value=刪除>
+</form>
+</td> 
+</table>
+{% endfor %}
+</ul>
+{% else %}
+<p><strong>此類別目前並無頁面。</strong></p>
+{% endif %}
+<p><a href={% url 'wiki:addPage' category.name %}>新增頁面</a></p>
+<p><a href={% url 'wiki:wiki' %}>回到wiki頁面</a></p>
+{% else %}
+<p>所指定的類別「{{categoryName}}」不存在。</p>
 {% endif %}
 </body>
 </html>
