--- a/language/wiki/templates/wiki/wiki.html
+++ b/language/wiki/templates/wiki/wiki.html
@@ -12,10 +12,21 @@
 {% if categories %}
 <h2>程式語言類別：</h2>
 <table>
-<tr><th>類別名稱</th></tr>
+<tr><th>類別名稱</th><th></th></tr>
 {% for category in categories %}
 <tr>
 <td><a href={% url 'wiki:category' category.name %}>{{category.name}}</a></td>
+<td>
+<form method=post action={% url 'wiki:deleteCategory' category.id %}>
+{% csrf_token %}
+<input type=submit value=刪除>
+</form>
+</td>
+<td>
+<form action={% url 'wiki:updateCategory' category.id %}>
+<input type="submit" value=修改>
+</form>
+</td>
 </tr>
 {% endfor %}
 </table>
