--- a/language/wiki/templates/wiki/category.html
+++ b/language/wiki/templates/wiki/category.html
@@ -7,30 +7,38 @@
 <link rel=stylesheet href="{% static 'main/css/main.css' %}">
 </head>
 <body>
+
 {% if category %}
 <h1>{{category.name}}</h1>
 {% if pages %}
 <table>
 <tr><th>頁面標題</th></tr>
 {% for page in pages %}
- <table>
-<td><a href={{page.url}}>{{page.title}}</a></td>
+<tr>
+<td>
+<a href={{page.url}}>{{page.title}}</a></td>
+</td>
+<td>
+<form action={% url 'wiki:updatePage' page.id %}>
+<input type=submit value=修改>
+</form>
+</td>
 <td>
 <form method=post action={% url 'wiki:deletePage' page.id %}>
 {% csrf_token %}
 <input type=submit value=刪除>
 </form>
-</td> 
-</table>
+</td>
+</tr>
 {% endfor %}
-</ul>
+</table>
 {% else %}
 <p><strong>此類別目前並無頁面。</strong></p>
 {% endif %}
-<p><a href={% url 'wiki:addPage' category.name %}>新增頁面</a></p>
-<p><a href={% url 'wiki:wiki' %}>回到wiki頁面</a></p>
+<p><a href={% url 'wiki:addPage' category.id %}>新增頁面</a></p>
 {% else %}
-<p>所指定的類別「{{categoryName}}」不存在。</p>
+<p>所指定的類別「{{category.name}}」不存在。</p>
 {% endif %}
+<p><a href={% url 'wiki:wiki' %}>回wiki頁面</a></p>
 </body>
 </html>
