--- a/language/wiki/templates/wiki/updateCategory.html
+++ b/language/wiki/templates/wiki/updateCategory.html
@@ -14,15 +14,6 @@
  <input type=submit value=送出>
 </form>
 <br>
-<p><a href={% url 'wiki:wiki' %}>回 Wiki 頁面</a></p>
-</body>
-</html>
-{% endfor %}
-</table>
-{% else %}
-<p><strong>目前尚未設定程式語言類別。</strong></p>
-{% endif %}
-<p><a href={% url 'wiki:addCategory' %}>新增類別</a></p>
-<p><a href={% url 'main:main' %}>回首頁</a></p>
+<p><a href={% url 'wiki:wiki' %}>回 Wiki 網頁</a></p>
 </body>
 </html>
