--- a/language/wiki/templates/wiki/wiki.html
+++ b/language/wiki/templates/wiki/wiki.html
@@ -15,7 +15,7 @@
 <tr><th>類別名稱</th><th></th></tr>
 {% for category in categories %}
 <tr>
-<td><a href={% url 'wiki:category' category.name %}>{{category.name}}</a></td>
+<td><a href={% url 'wiki:category' category.id %}>{{category.name}}</a></td>
 <td>
 <form method=post action={% url 'wiki:deleteCategory' category.id %}>
 {% csrf_token %}
@@ -33,7 +33,9 @@
 {% else %}
 <p><strong>目前尚未設定程式語言類別。</strong></p>
 {% endif %}
-<p><a href={% url 'wiki:addCategory' %}>新增類別</a></p>
+<br>
+<br>
+<a href={% url 'wiki:addCategory' %}>新增程式語言分類</a></p>
 <p><a href={% url 'main:main' %}>回首頁</a></p>
 </body>
 </html>
