--- a/language/wiki/templates/wiki/updateCategory.html
+++ b/language/wiki/templates/wiki/updateCategory.html
@@ -1,13 +1,7 @@
-<!doctype html>
-{% load staticfiles %}
-<html>
-<head>
-<title>程式語言小百科</title>
-<meta charset=utf-8>
-<link rel=stylesheet href={% static 'main/css/main.css' %}>
-</head>
-<body>
-<h1>修改程式語言分類</h1>
+{% extends "main/base.html" %}
+{% block heading %}修改「{{page.title}}」修改程式語言分類{% endblock %}
+{% block content %}
+
 <form method=post action={% url 'wiki:updateCategory' category.id %}>
  {% csrf_token %}
  {{form.as_p}}
@@ -15,5 +9,4 @@
 </form>
 <br>
 <p><a href={% url 'wiki:wiki' %}>回 Wiki 網頁</a></p>
-</body>
-</html>
+{% endblock %}
