--- a/language/wiki/templates/wiki/wiki.html
+++ b/language/wiki/templates/wiki/wiki.html
@@ -1,13 +1,6 @@
-<!doctype html>
-{% load staticfiles %}
-<html>
-<head>
-<title>程式語言小百科</title>
-<meta charset=utf-8>
-<link rel=stylesheet href={% static 'main/css/main.css' %}>
-</head>
-<body>
-<h1>Wiki 說--Hello world!</h1>
+{% extends "main/base.html" %}
+{% block heading %}程式語言分類{% endblock %}
+{% block content %}
 <br>
 {% if categories %}
 <h2>程式語言類別：</h2>
@@ -37,5 +30,4 @@
 <br>
 <a href={% url 'wiki:addCategory' %}>新增程式語言分類</a></p>
 <p><a href={% url 'main:main' %}>回首頁</a></p>
-</body>
-</html>
+{% endblock %}
