--- a/language/wiki/templates/wiki/about.html
+++ b/language/wiki/templates/wiki/about.html
@@ -1,16 +1,11 @@
-<!doctype html>
+{% extends "main/base.html" %}
 {% load staticfiles %}
-<html>
-<head>
-<title>程式語言小百科</title>
-<meta charset=utf-8>
-<link rel=stylesheet href={% static 'main/css/main.css' %}>
-</head>
-<body>
-<h1> 這裡是「關於程式語言小百科」</h1>
+{% block heading %}關於{% endblock %}
+{% block content %}
+<h2> 這裡是「關於程式語言小百科」</h2>
 <p>{{message}}</p>
 <p>我們提供許多城市語言的相關知識,歡迎瀏覽.</p>
 <br>
 <p><a href={% url 'main:main' %}>回首頁</a></p>
-</body>
-</html>
+<p><img src={% static 'main/img/proglang.png' %} alt=程式語言影像></p>
+{% endblock %}
