--- a/language/wiki/templates/wiki/addCategory.html
+++ b/language/wiki/templates/wiki/addCategory.html
@@ -1,17 +1,9 @@
-<!doctype html>
-{% load staticfiles %}
-<html>
-<head>
-<title>程式語言小百科</title>
-<meta charset=utf-8>
-<link rel=stylesheet href={% static 'main/css/main.css' %}>
-</head>
-<body>
-<h1>新增一個程式語言類別</h1>
+{% extends "main/base.html" %}
+{% block heading %}新增程式語言分類{% endblock %}
+{% block content %}
 <form method=post action={% url 'wiki:addCategory' %}>
  {% csrf_token %}
  {{form.as_p}}
  <input type=submit value=送出>
 </form>
-</body>
-</html>
+{% endblock %}
